# minimal-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml  server.py
tools/: __init__.py  date_time.py  registry.py  wiki_json.py
